<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background"
    tools:context=".MovieActivity">

    <TextView
        android:id="@+id/text_event"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:text="@string/event_text"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/movie_title"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@id/text_genres"
        android:layout_centerHorizontal="true"
        android:text="@string/movie_title_text"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_event"/>

    <TextView
        android:id="@+id/original_title"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@id/start_time"
        android:layout_centerHorizontal="true"
        android:text="@string/original_title_text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/movie_title"/>

    <TextView
        android:id="@+id/text_genres"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@id/text_event"
        android:layout_centerHorizontal="true"
        android:text="@string/genres_text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/original_title"/>

    <TextView
        android:id="@+id/theatres"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@id/length"
        android:layout_centerHorizontal="true"
        android:text="@string/theatres_text"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_genres"/>

    <TextView
        android:id="@+id/start_time"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@id/movie_title"
        android:layout_centerHorizontal="true"
        android:text="@string/start_time_text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/theatres"/>

    <TextView
        android:id="@+id/length"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@id/original_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:text="@string/length"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/start_time"/>

    <TextView
        android:id="@+id/language"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@id/age_rating"
        android:layout_centerHorizontal="true"
        android:text="@string/language_text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/length"/>

    <TextView
        android:id="@+id/age_rating"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/age_rating_text"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/language"/>

    <TextView
        android:id="@+id/presentation_method"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@id/add_rating"
        android:layout_centerHorizontal="true"
        android:text="@string/presentation_method_text"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/age_rating"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/add_rating"
        android:layout_width="151dp"
        android:layout_height="49dp"
        android:layout_below="@id/language"
        android:layout_centerHorizontal="true"
        android:onClick="loadAddRating"
        android:text="@string/add_rating_text"
        app:layout_constraintTop_toBottomOf="@id/presentation_method"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>