<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_constraintlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/choose_theater_text"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:text="@string/finnkino_text"
        android:textSize="20sp"
        app:flow_horizontalAlign="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/theatre_list_spinner"
        android:layout_width="324dp"
        android:layout_height="150dp"
        android:layout_marginTop="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:background="@color/cardview_light_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_theater_text"
        app:layout_constraintBottom_toTopOf="@id/select_theatre_button"
        tools:ignore="SpeakableTextPresentCheck"/>

    <Button
        android:id="@+id/select_theatre_button"
        android:layout_width="282dp"
        android:layout_height="74dp"
        android:onClick="loadTheatreActivity"
        android:text="@string/theatre_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/theatre_list_spinner"
        app:layout_constraintBottom_toTopOf="@id/to_rating_button"/>

    <Button
        android:id="@+id/to_imdb_button"
        android:layout_width="282dp"
        android:layout_height="74dp"
        android:onClick="loadImdbView"
        android:text="@string/imdb_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/select_theatre_button"
        app:layout_constraintBottom_toTopOf="@id/to_rating_button" />

    <Button
        android:id="@+id/to_rating_button"
        android:layout_width="282dp"
        android:layout_height="74dp"
        android:onClick="loadRatingsView"
        android:text="@string/rating_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>


