<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background"
    tools:context=".TheatreActivity">

    <TextView
        android:id="@+id/current_date"
        android:layout_width="163dp"
        android:layout_height="50dp"
        android:textSize="24sp"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toStartOf="@+id/next_day_button"
        app:layout_constraintStart_toEndOf="@+id/previous_day_button"
        app:layout_constraintTop_toTopOf="parent"/>
    <Button
        android:id="@+id/previous_day_button"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:text="@string/previous_day_text"
        android:onClick="previousDay"
        app:layout_constraintEnd_toStartOf="@id/current_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/next_day_button"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:onClick="nextDay"
        android:text="@string/next_day_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/current_date"/>

    <Button
        android:id="@+id/start_time_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="21dp"
        android:onClick="startTimePicker"
        android:text="@string/start_time_text"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@id/current_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ListView
        android:id="@+id/list"
        android:layout_width="324dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/background"
        app:layout_constraintTop_toBottomOf="@id/start_time_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>